--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "cheerio": "^1.0.0-rc.2",
     "puppeteer": "^1.3.0",
     "superagent": "^3.8.2"
+  },
+  "devDependencies": {
+    "js-beautify": "^1.7.5"
   }
 }
